// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputField > should render input field component > expected html 1`] = `
<div>
  <div
    data-testid="input-test-id"
    id="input-test-id"
  >
    <label
      class="block mb-2"
      for="test-id"
      id="input-test-id-label"
    >
      <span
        class="font-semibold"
      >
        label test
      </span>
    </label>
    <input
      aria-invalid="false"
      aria-labelledby="input-test-id-label"
      class="block rounded-lg border-gray-500 focus:border-blue-500 focus:outline-hidden focus:ring-3 focus:ring-blue-500 disabled:bg-gray-100 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70 read-only:bg-gray-100 read-only:pointer-events-none read-only:cursor-not-allowed read-only:opacity-70"
      data-testid="input-field"
      id="test-id"
      name="test"
      type="text"
      value="default value"
    />
  </div>
</div>
`;

exports[`InputField > should render input field with error message > expected html 1`] = `
<div>
  <div
    data-testid="input-test-id"
    id="input-test-id"
  >
    <label
      class="block mb-2"
      for="test-id"
      id="input-test-id-label"
    >
      <span
        class="font-semibold"
      >
        label test
      </span>
    </label>
    <p
      class="mb-2"
    >
      <span
        class="inline-block max-w-prose border-l-2 border-red-600 bg-red-50 px-3 py-1"
        data-testid="input-error-test-id"
        id="input-test-id-error"
        role="alert"
      >
        error message
      </span>
    </p>
    <input
      aria-errormessage="input-test-id-error"
      aria-invalid="true"
      aria-labelledby="input-test-id-label"
      class="block rounded-lg focus:outline-hidden focus:ring-3 disabled:bg-gray-100 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70 read-only:bg-gray-100 read-only:pointer-events-none read-only:cursor-not-allowed read-only:opacity-70 border-red-500 focus:border-red-500 focus:ring-red-500"
      data-testid="input-field"
      id="test-id"
      name="test"
      type="text"
      value="default value"
    />
  </div>
</div>
`;

exports[`InputField > should render input field with help message > expected html 1`] = `
<div>
  <div
    data-testid="input-test-id"
    id="input-test-id"
  >
    <label
      class="block mb-2"
      for="test-id"
      id="input-test-id-label"
    >
      <span
        class="font-semibold"
      >
        label test
      </span>
    </label>
    <input
      aria-describedby="input-test-id-help-secondary"
      aria-invalid="false"
      aria-labelledby="input-test-id-label"
      class="block rounded-lg border-gray-500 focus:border-blue-500 focus:outline-hidden focus:ring-3 focus:ring-blue-500 disabled:bg-gray-100 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70 read-only:bg-gray-100 read-only:pointer-events-none read-only:cursor-not-allowed read-only:opacity-70"
      data-testid="input-field"
      id="test-id"
      name="test"
      type="text"
      value="default value"
    />
    <span
      class="block max-w-prose text-gray-500 mt-2"
      data-testid="input-field-help-secondary"
      id="input-test-id-help-secondary"
    >
      help message
    </span>
  </div>
</div>
`;

exports[`InputField > should render input field with required > expected html 1`] = `
<div>
  <div
    data-testid="input-test-id"
    id="input-test-id"
  >
    <label
      class="block mb-2"
      for="test-id"
      id="input-test-id-label"
    >
      <span
        class="font-semibold"
      >
        label test
      </span>
       
      <span
        aria-hidden="true"
      >
        (
        input-label.required
        )
      </span>
    </label>
    <input
      aria-invalid="false"
      aria-labelledby="input-test-id-label"
      aria-required="true"
      class="block rounded-lg border-gray-500 focus:border-blue-500 focus:outline-hidden focus:ring-3 focus:ring-blue-500 disabled:bg-gray-100 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70 read-only:bg-gray-100 read-only:pointer-events-none read-only:cursor-not-allowed read-only:opacity-70"
      data-testid="input-field"
      id="test-id"
      name="test"
      required=""
      type="text"
      value="default value"
    />
  </div>
</div>
`;
